data/all_generated_tests/raw_wast_tests/unreachable_ImproperFunctionCallorReturnHandling_1470.wast
;; 1. **Test 1: Unreachable Before Function Call**    - Description: Insert an `unreachable` instruction just before a direct function call. The test checks if the function call is never executed due to the unconditional trap.      - *Constraint:* Ensures that the control flow is correctly interrupted by `unreachable` before reaching the function call.      - *Improper Handling Check:* Verifies that `unreachable` invalidates the call to the function.

(assert_invalid
  (module (func $call_after_unreachable
    (unreachable) (call $some_function)
  ))
  "type mismatch"
)